_err9.txt
  File "D:\AUTO-EVO-AI-V0.1\_fix_v9_comprehensive.py", line 72
    if rline.endswith(join_kw + '"') and nstripped == '"' + ')'):
                                                               ^
SyntaxError: unmatched ')'
